--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hamurabi</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js" integrity="sha512-NxocnqsXP3zm0Xb42zqVMvjQIktKEpTIbCXXyhBPxqGZHqhcOXHs4pXI/GoZ8lE+2NJONRifuBpi9DxC58L0Lw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="sketch.js"></script>
+    <script type="module" src="sketch.js"></script>
     <script src="hamurabi.js"></script>
 </head>
 <body>
